# vaa

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  LICENSE-MIT  README.md  VAA_REVIEWED_AND_HARDENED_ARCHITECTURE_PLAN.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cursor/plans/: stack_integrity_p0_p2.plan.md  vaa_seal_ingest_04f94513.plan.md  vaa_semasm_adapter_7a996a73.plan.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  fulcio-sign.yml  release-binaries.yml  transparency-rekor.yml
assets/seccomp/: vaa-default.json
docs/: ISOLATION_OPS_PROOF_PLAN.md  SEMANTIC_EVIDENCE_INTEGRITY_PLAN.md  TRUST_ROOT_OPS_PROOF_PLAN.md  V0_2_CONTROLLER_DEPTH_PLAN.md  cache.md  implementation-baseline.md  post-alpha-harden.md  progress.md  release-v0.1-checklist.md  seal.md  task-schema.md  vaa-canonical-json-v1.md
fixtures/canonical-json/: README.md  expected-canonical.jsonl  expected-sha256.txt  gen_expected.py  vectors.json
fixtures/ingest/count_byte/: README.md
fixtures/ingest/count_byte_linux/: README.md  candidate.asm
fixtures/ingest/hlax64_count_byte/: README.md  candidate.asm  count_byte.sem.toml
fixtures/ingest/hlax64_find_first_byte/: README.md  candidate.asm  find_first_byte.vaa.toml
fixtures/ingest/hlax64_find_last_byte/: README.md  candidate.asm
fixtures/ingest/hlax64_max_usize/: README.md  candidate.asm
fixtures/ingest/hlax64_memcmp/: README.md  candidate.asm  memcmp.sem.toml  memcmp.vaa.toml
fixtures/ingest/hlax64_memcpy/: README.md  candidate.asm  memcpy.sem.toml
fixtures/ingest/hlax64_memset/: README.md  candidate.asm  memset.sem.toml
fixtures/ingest/hlax64_min_usize/: README.md  candidate.asm  min_usize.sem.toml  min_usize.vaa.toml
fixtures/ingest/hlax64_replace_byte/: README.md  candidate.asm
fixtures/ingest/hlax64_sum_i64/: README.md  candidate.asm  sum_i64.sem.toml
fixtures/negative/: README.md  cache_verification_missing_blob.json  task_zero_budget.vaa.toml
fixtures/run/count_byte/: 01_wrong.asm  02_repaired.asm  README.md
fixtures/run/find_first_byte/: 00_write_broken.asm  01_wrong.asm  02_repaired.asm  README.md  find_first_byte.sem.toml
fixtures/run/find_last_byte/: 00_write_broken.asm  01_wrong.asm  README.md  find_last_byte.vaa.toml
fixtures/run/memcmp/: 00_write_broken.asm  01_wrong.asm  02_repaired.asm  README.md
fixtures/run/memcpy/: 00_write_broken.asm  01_wrong.asm  README.md  memcpy.vaa.toml
fixtures/run/memset/: 00_write_broken.asm  01_wrong.asm  02_repaired.asm  README.md
fixtures/run/replace_byte/: 00_write_broken.asm  01_wrong.asm  02_repaired.asm  README.md  (+2 more)
fixtures/semasm/: README.md
fixtures/tasks/: README.md  invalid_missing_tests.vaa.toml  invalid_schema_version.vaa.toml  invalid_unknown_field.vaa.toml  sum_i64.vaa.toml  sum_i64_alt_id.vaa.toml  sum_i64_budget_mut.vaa.toml
fuzz/: Cargo.toml  README.md
fuzz/corpus/cache_verification_record/: cache_verification_garbage.json
fuzz/corpus/seal_envelope/: minimal.json
fuzz/corpus/transparency_doc/: transparency_wrong_schema.json
fuzz/fuzz_targets/: cache_verification_record.rs  seal_envelope.rs  task_toml.rs  transparency_doc.rs
schemas/: task.vaa.schema.json
scripts/: ci-doctor-live-probe.ps1  ci-doctor-live-probe.sh  ci-gate-sign-setup.ps1  ci-gate-sign-setup.sh  ci-gate-transparency.ps1  ci-gate-transparency.sh  regen-hlax64-count_byte.ps1  regen-hlax64-count_byte.sh  regen-hlax64-find_first_byte.ps1  regen-hlax64-find_first_byte.sh  regen-hlax64-find_last_byte.ps1  regen-hlax64-find_last_byte.sh  regen-hlax64-max_usize.ps1  regen-hlax64-max_usize.sh  regen-hlax64-memcmp.ps1  regen-hlax64-memcmp.sh  regen-hlax64-memcpy.ps1  regen-hlax64-memcpy.sh  regen-hlax64-memset.ps1  regen-hlax64-memset.sh  regen-hlax64-min_usize.ps1  regen-hlax64-min_usize.sh  regen-hlax64-replace_byte.ps1  regen-hlax64-replace_byte.sh  regen-hlax64-sum_i64.ps1  regen-hlax64-sum_i64.sh  release-prep-check.ps1  release-prep-check.sh
src/: canonical_json.rs  exit_code.rs  lib.rs  main.rs
src/cache/: keys.rs  mod.rs  policy.rs  store.rs
src/candidate/: mod.rs  protocol.rs
src/evidence/: bundle.rs  chain.rs  durability.rs  fulcio.rs  mod.rs  pkcs11_softhsm.rs  rekor.rs  report.rs  seal.rs  seal_log.rs  seal_sign.rs  signer.rs  status.rs  transparency.rs
src/harness/: mod.rs  template.rs
src/inspect/: artifact.rs  mod.rs
src/model/: adapter.rs  external.rs  live.rs  mod.rs
src/orchestrate/: machine.rs  mod.rs
src/process/: mod.rs  platform.rs  runner.rs
src/run/: controller.rs  event.rs  mod.rs  resume.rs  run_dir.rs  run_id.rs  verify_seal.rs
src/sandbox/: backend.rs  exec.rs  mod.rs
src/search/: mod.rs
src/semasm/: capabilities.rs  doctor.rs  mod.rs  status.rs  verify.rs
src/task/: digest.rs  error.rs  locked.rs  mod.rs  model.rs  validate.rs
tests/: semasm_gate1_smoke.rs  semasm_gate2_smoke.rs  semasm_verify_smoke.rs
(+35 files in other folders)
