[package]
name = "vaa"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Verifiable Assembly Agent — fail-closed orchestration around SemASM"
repository = "https://github.com/megaalive/vaa"
homepage = "https://github.com/megaalive/vaa"
readme = "README.md"
keywords = ["assembly", "verification", "semasm", "cli"]
categories = ["development-tools", "command-line-utilities"]
authors = ["VAA contributors"]

[features]
default = ["local-cli"]
local-cli = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
thiserror = "2.0"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "pe", "macho", "unaligned"] }

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unnecessary_literal_bound = "allow"
