[package]
name = "vaa"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Verifiable Assembly Agent — fail-closed orchestration around SemASM"
repository = "https://github.com/megaalive/vaa"
homepage = "https://github.com/megaalive/vaa"
readme = "README.md"
keywords = ["assembly", "verification", "semasm", "cli"]
categories = ["development-tools", "command-line-utilities"]
authors = ["VAA contributors"]

[features]
default = ["local-cli"]
local-cli = []
# Opt-in OpenAI-compatible HTTP adapter (ureq). Default build stays offline.
live-model = ["dep:ureq"]
# Opt-in live Rekor HTTP client (ureq). Mock transport always available.
rekor = ["dep:ureq"]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
thiserror = "2.0"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "pe", "macho", "unaligned"] }
ureq = { version = "2.12", optional = true, default-features = true, features = ["json"] }

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unnecessary_literal_bound = "allow"
